2000-10-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (NewMenuStyle):
	fixed core dump with uninitialised menu styles like "MenuStyle foo"

	* fvwm/builtins.c (Emulate):
	fixed potential coredump and unnecessary redrawing

	* fvwm/module_interface.c (do_execute_module):
	fixed core dump with maximum number of allowed module arguments
	modules can now have an unlimited number of arguments

	* fvwm/functions.c (ExecuteFunction):
	fixed core dump when adding non-builtin functions to decors

	* fvwm/misc.c (fvwm_msg):
	* fvwm/builtins.c (echo_func):
	fixed coredump with "echo %*"

	* fvwm/functions.c (func_config):
	(dummy_func):
	(ExecuteFunction):
	fixed coredump with command string: silent"

2000-10-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (size_menu_vertically):
	(size_menu_horizontally):
	(paint_item):
	fixed sizing and geometry of menu items without text but with a picture

	* fvwm/virtual.c (MoveViewport):
	fixed unnecessary redraw when moving the viewport one page down or right
	and a window was exactly at the bottom or right border

	* fvwm/events.c (HandleMapRequestKeepRaised):
	MouseFocusClickRaises works if a newly mapped window is placed over the
	currently focused window

	* fvwm/fvwm.c (InitVariables):
	* libs/defaults.h (DEFAULT_MOVE_RESISTANCE):
	(DEFAULT_SNAP_ATTRACTION):
	new defaults

	* fvwm/decorations.c (SelectDecor):
	* libs/defaults.h (MAX_HANDLE_WIDTH):
	(MAX_BORDER_WIDTH):
	new macros

	* fvwm/fvwm.h (FvwmWindow):
	* fvwm/style.c (ProcessNewStyle):
	made boundary_width, border_width and handle_width short instead of int

	* fvwm/fvwm.h (struct):
	use NUMBER_OF_BUTTONS macro

	* fvwm/decorations.h:
	* fvwm/decorations.c (SelectDecor):
	* fvwm/add_window.c (setup_style_and_decor):
	simplified signature of SelectDecor

	* fvwm/decorations.c (SelectDecor):
	* fvwm/fvwm.c (InitVariables):
	* fvwm/fvwm.h (BOUNDARY_WIDTH):
	* fvwm/screen.h (ScreenInfo):
	removed BoundaryWidth and NoBoundaryWidth members; use macros from