@@ -1,3 +1,9 @@
+2000-10-12  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmDebug/FvwmDebug.c (list_configure):
+	* FvwmCommand/FvwmCommand.c (list_configure):
+	adapted to new format of border_width
+
 2000-10-12  Mikhael Goikhman  <migo@homemail.com>
 
 	* FvwmButtons/FvwmButtons.c:
