@@ -1,5 +1,8 @@
 2000-10-12  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* libs/vpacket.h (ConfigWinPacket):
+	border_width member is unsigned short
+
 	* fvwm/menus.c (NewMenuStyle):
 	fixed core dump with uninitialised menu styles like "MenuStyle foo"
 
